# chimera-agent-factory

./: .coderabbit.yaml  .gitignore  CLAUDE.md  DAY1_SUBMISSION.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  README.md  TASK2_REPORT.md  pyproject.toml
.cursor/: rules
.github/workflows/: main.yml
research/: architecture_strategy.md  research_summary.md  tooling_strategy.md
skills/: README.md  __init__.py  base.py
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
src/: __init__.py
tests/: __init__.py  test_skills_interface.py  test_trend_fetcher.py
